src/objects/LeadToCallFileRuleSet__c.object
<CustomObject>
    <description>Contain all the lead to call file rule conditions</description>
    <fields>
        <fullName>Field_Name_Dyna__c</fullName>
        <description>Dynamic field name field</description>
        <label>Field Name Dyna</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Value__c</fullName>
        <description>Field value on the right of the condition</description>
        <label>Field Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadToCallFileRule__c</fullName>
        <description>A leadToCallFileRule can have multi leadToCallFileRuleSets</description>
        <label>LeadToCallFileRule</label>
        <referenceTo>LeadToCallFileRule__c</referenceTo>
        <relationshipLabel>LeadToCallFileRuleSets</relationshipLabel>
        <relationshipName>LeadToCallFileRuleSets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <description>Operator is used to compare the values</description>
        <label>Operator</label>
        <picklist>
            <picklistValues>
                <fullName>is equal to</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>is not equal to</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>contains with</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>is greater than</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>is less than</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>LeadToCallFileRuleSet</label>
    <nameField>
        <label>LeadToCallFileRuleSet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LeadToCallFileRuleSets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>